jenkins-connector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: jenkins-connector
  name: jenkins-connector
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: jenkins-connector
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: jenkins-connector
    spec:
      containers:
      - env:
        image: delcacho/jenkins-connector
        imagePullPolicy: ""
        name: jenkins-connector
      hostname: jenkins-connector
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
