sparkproxy.yaml
kind: Service
apiVersion: v1
metadata:
  name: spark-ui-proxy
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    component: spark-ui-proxy
  type: LoadBalancer
