ingress-http.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-http
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    #nginx.ingress.kubernetes.io/proxy-ssl-verify: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
  - host: superset.bayescluster.com
    http:
      paths:
      - path: /
        backend:
          serviceName: superset
          servicePort: 9000
  - host: mlflow.bayescluster.com
    http:
      paths:
      - path: /
        backend:
          serviceName: mlflow
          servicePort: 5000
  - host: jenkins.bayescluster.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 8080
  - host: airbyte.bayescluster.com
    http:
      paths:
      - path: /
        backend:
          serviceName: webapp
          servicePort: 8000
