ingress-https.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-https
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: ide.bayescluster.com
    http:
      paths:
      - path: /
        backend:
          serviceName: notebook
          servicePort: 8000
      - path: /
        backend:
          serviceName: notebook
          servicePort: 8888
      - path: /
        backend:
          serviceName: scheduler
          servicePort: 8787
